Insert Cart & Show List Cart

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -55,6 +55,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
+                        android:id="@+id/judulProduk"
                         android:gravity="right"
                         android:text="Niqab Bandana Poni Shiffon Arab"
                         android:textStyle="bold"
@@ -65,6 +66,7 @@
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/descProduk"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/berlinsans"
                         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non interdum erat. Integer pellentesque lobortis lorem. Nullam eleifend purus ex, gravida euismod nibh ornare vel. Mauris ac nibh ante. Proin vel mauris tortor. Praesent eros erat, tincidunt ac nisi vitae, placerat sollicitudin diam. Integer sollicitudin blandit nunc, quis ornare elit gravida sit amet."
@@ -362,8 +364,9 @@
                         android:paddingBottom="12dp"
                         android:paddingLeft="90dp"
                         android:paddingRight="90dp"
+                        android:id="@+id/btnSaveCart"
                         android:paddingTop="12dp"
-                        android:text="Continue"
+                        android:text="Add To Cart"
                         android:textColor="@android:color/white"
                         android:textSize="15sp"
                         android:fontFamily="@font/berlinsans"
