--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context=".submain.CartFragment">
+             tools:context=".submain.cart.CartFragment">
 
     <ScrollView
             android:layout_width="match_parent"
@@ -39,329 +39,11 @@
         >
 
 
-            <android.support.v7.widget.CardView
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvListCart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/cv_1">
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                    <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                        <ImageView
-                                android:id="@+id/imageView0"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
-                                app:srcCompat="@drawable/img_1" />
-                    </LinearLayout>
-
-                    <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:background="#fff"
-                                android:gravity="center"
-                                android:id="@+id/ll_1"
-                        >
-
-                            <TextView
-                                    android:layout_weight="1"
-                                    android:id="@+id/total1"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Niqab Bandana Poni Shiffon Arab"
-                                    android:fontFamily="@font/berlinsans"
-                                    android:textColor="@android:color/black"
-
-                            />
-
-                            <ImageView
-                                    android:id="@+id/imageView3"
-                                    android:layout_width="20dp"
-                                    android:layout_height="20dp"
-                                    android:layout_gravity="right"
-                                    app:srcCompat="@drawable/cancel" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_below="@id/ll_1"
-                                android:layout_marginTop="16dp"
-                                android:id="@+id/ll_2">
-
-                            <TextView
-                                    android:id="@+id/textView6"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="20dp"
-                                    android:text="Black" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_below="@id/ll_2"
-                                >
-
-                            <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:background="#fff"
-                                    android:gravity="center"
-                            >
-
-                                <TextView
-                                        android:layout_weight="1"
-                                        android:layout_width="0dp"
-                                        android:layout_height="wrap_content"
-                                        android:text="Harga Rp. 48000"
-                                        android:fontFamily="@font/berlinsans"
-                                        android:textColor="@color/colorPrimary"
-
-                                />
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </RelativeLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/cv_1"
-                    android:id="@+id/cv_2">
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                    <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                        <ImageView
-                                android:id="@+id/imageView2"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
-                                app:srcCompat="@drawable/img_1" />
-                    </LinearLayout>
-
-                    <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:background="#fff"
-                                android:gravity="center"
-                                android:id="@+id/ll_3"
-                        >
-
-                            <TextView
-                                    android:layout_weight="1"
-                                    android:id="@+id/total2"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Niqab Bandana Poni Shiffon Arab"
-                                    android:fontFamily="@font/berlinsans"
-                                    android:textColor="@android:color/black"
-
-                            />
-
-                            <ImageView
-                                    android:id="@+id/imageView6"
-                                    android:layout_width="20dp"
-                                    android:layout_height="20dp"
-                                    android:layout_gravity="right"
-                                    app:srcCompat="@drawable/cancel" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_below="@id/ll_3"
-                                android:layout_marginTop="16dp"
-                                android:id="@+id/ll_5">
-
-                            <TextView
-                                    android:id="@+id/textView7"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="20dp"
-                                    android:text="Black" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_below="@id/ll_5"
-                        >
-
-                            <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:background="#fff"
-                                    android:gravity="center"
-                            >
-
-                                <TextView
-                                        android:layout_weight="1"
-                                        android:layout_width="0dp"
-                                        android:layout_height="wrap_content"
-                                        android:text="Harga Rp. 48000"
-                                        android:fontFamily="@font/berlinsans"
-                                        android:textColor="@color/colorPrimary"
-
-                                />
-
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </RelativeLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/cv_2">
-
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                    <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                        <ImageView
-                                android:id="@+id/imageView0"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
-                                app:srcCompat="@drawable/img_1" />
-                    </LinearLayout>
-
-                    <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:background="#fff"
-                                android:gravity="center"
-                                android:id="@+id/ll_1"
-                        >
-
-                            <TextView
-                                    android:layout_weight="1"
-                                    android:id="@+id/total1"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Niqab Bandana Poni Shiffon Arab"
-                                    android:fontFamily="@font/berlinsans"
-                                    android:textColor="@android:color/black"
-
-                            />
-
-                            <ImageView
-                                    android:id="@+id/imageView3"
-                                    android:layout_width="20dp"
-                                    android:layout_height="20dp"
-                                    android:layout_gravity="right"
-                                    app:srcCompat="@drawable/cancel" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_below="@id/ll_1"
-                                android:layout_marginTop="16dp"
-                                android:id="@+id/ll_2">
-
-                            <TextView
-                                    android:id="@+id/textView6"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginBottom="20dp"
-                                    android:text="Black" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_below="@id/ll_2"
-                        >
-
-                            <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:background="#fff"
-                                    android:gravity="center"
-                            >
-
-                                <TextView
-                                        android:layout_weight="1"
-                                        android:layout_width="0dp"
-                                        android:layout_height="wrap_content"
-                                        android:text="Harga Rp. 48000"
-                                        android:fontFamily="@font/berlinsans"
-                                        android:textColor="@color/colorPrimary"
-
-                                />
-
-                                
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </RelativeLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
+                    android:layout_marginTop="16dp"/>
 
         </RelativeLayout>
 
@@ -389,7 +71,7 @@
                         android:textStyle="bold" />
 
                 <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/totalHarga"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
