update cart harga barang, update layout profile

--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -290,7 +290,7 @@
 
 
         <Button
-                android:id="@+id/btnBuatPesanan"
+                android:id="@+id/btnPesanan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
