--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -76,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="right"
-                        android:text="Rp.000.000"
+                        tools:text="Rp. 000.000"
                         android:textColor="@android:color/black"
                         android:textStyle="bold" />
 
