--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="wrap_content"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
 
 
 
@@ -21,8 +22,8 @@
                 <ImageView
 
                         android:id="@+id/imgCart"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
                         app:srcCompat="@drawable/img_1" />
             </LinearLayout>
 
@@ -37,6 +38,7 @@
                         android:background="#fff"
                         android:gravity="center"
                         android:id="@+id/ll_1"
+                        android:layout_marginStart="8dp"
                 >
 
                     <TextView
@@ -50,9 +52,8 @@
 
                     />
 
-                    <ImageView
-                            android:id="@+id/imageView3"
-
+                    <ImageButton
+                            android:id="@+id/btnRemove"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_gravity="right"
@@ -64,15 +65,34 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_below="@id/ll_1"
-                        android:layout_marginTop="16dp"
-                        android:id="@+id/ll_2">
+                        android:id="@+id/ll_2"
+                        android:layout_marginStart="8dp">
 
                     <TextView
                             android:id="@+id/descCart"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="20dp"
-                            android:text="Black" />
+                            android:layout_marginTop="8dp"
+                            tools:text="Deskripsi"
+                            android:fontFamily="@font/berlinsans"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_below="@id/ll_2"
+                        android:id="@+id/ll_3">
+
+                    <TextView
+                            android:id="@+id/qtyCart"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            tools:text="Jumlah"
+                            android:layout_marginStart="8dp"
+                            android:fontFamily="@font/berlinsans"/>
 
                 </LinearLayout>
 
@@ -80,7 +100,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_below="@id/ll_2"
+                        android:layout_below="@id/ll_3"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginStart="8dp"
                 >
 
                     <LinearLayout
@@ -96,7 +118,7 @@
                                 android:id="@+id/hargaCart"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="Harga Rp. 48000"
+                                tools:text="Harga Rp. 48000"
                                 android:fontFamily="@font/berlinsans"
                                 android:textColor="@color/colorPrimary"
 
